Closed
Bug 1028237
Opened 7 years ago
Closed 7 years ago
Video controls cut and flickering when fading away
Categories
(Core :: Audio/Video, defect)
Tracking
()
VERIFIED
FIXED
mozilla33
People
(Reporter: FlorinMezei, Assigned: mattwoodrow)
References
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
509.70 KB,
image/png
|
Details | |
1.17 KB,
patch
|
roc
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Reproducible on: Mozilla/5.0 (X11; Linux x86_64; rv:31.0) Gecko/20100101 Firefox/31.0 20140619131915 Mozilla/5.0 (X11; Linux x86_64; rv:32.0) Gecko/20100101 Firefox/32.0 20140619004025 Mozilla/5.0 (X11; Linux x86_64; rv:33.0) Gecko/20100101 Firefox/33.0 20140619030203 Steps to reproduce: 1. Launch Firefox with a clean profile. 2. Go to, for example https://air.mozilla.org/webrtc-meet-up-francophone-paris/. 3. Play the video. 4. During playback hover the video are to get the video controls, then move the cursor outside the video area. Expected results: When the cursor is moved outside the video area, the video controls should fade away in a 2 sec animation. Actual results: When the cursor is moved outside the video area, the video controls are cut, as part disappears instantly, while part continues to flicker for about 2 seconds and then disappears. Notes: 1. The issue appeared after fix for bug 994282. 2. On Windows and Mac there are no issues, as the controls fade away in a 2 sec second animation.
Reporter | ||
Comment 1•7 years ago
|
||
Matt, since you landed the patch for bug 994282, could you please have a look at this?
Flags: needinfo?(matt.woodrow)
Keywords: regression
status-firefox30:
--- → unaffected
status-firefox31:
--- → affected
status-firefox32:
--- → affected
status-firefox33:
--- → affected
tracking-firefox31:
--- → ?
tracking-firefox32:
--- → ?
tracking-firefox33:
--- → ?
Assignee | ||
Comment 3•7 years ago
|
||
Assignee: nobody → matt.woodrow
Attachment #8445596 -
Flags: review?(roc)
Flags: needinfo?(matt.woodrow)
Comment on attachment 8445596 [details] [diff] [review] Account for device offset for thebes layer masks Review of attachment 8445596 [details] [diff] [review]: ----------------------------------------------------------------- r+ on the other part. ::: widget/cocoa/nsChildView.mm @@ +3723,5 @@ > nsAutoRetainCocoaObject kungFuDeathGrip(self); > bool painted = false; > if (mGeckoChild->GetLayerManager()->GetBackendType() == LayersBackend::LAYERS_BASIC) { > nsBaseWidget::AutoLayerManagerSetup > + setupLayerManager(mGeckoChild, targetContext, BufferMode::BUFFERED); Is this change supposed to be part of this patch?
Assignee | ||
Comment 5•7 years ago
|
||
(In reply to Robert O'Callahan (:roc) (Mozilla Corporation) from comment #4) > Comment on attachment 8445596 [details] [diff] [review] > Account for device offset for thebes layer masks > > Review of attachment 8445596 [details] [diff] [review]: > ----------------------------------------------------------------- > > r+ on the other part. > > ::: widget/cocoa/nsChildView.mm > @@ +3723,5 @@ > > nsAutoRetainCocoaObject kungFuDeathGrip(self); > > bool painted = false; > > if (mGeckoChild->GetLayerManager()->GetBackendType() == LayersBackend::LAYERS_BASIC) { > > nsBaseWidget::AutoLayerManagerSetup > > + setupLayerManager(mGeckoChild, targetContext, BufferMode::BUFFERED); > > Is this change supposed to be part of this patch? Nope, accidental qref.
Comment 6•7 years ago
|
||
Video matters now. Tracking.
Assignee | ||
Comment 7•7 years ago
|
||
Attachment #8445596 -
Attachment is obsolete: true
Attachment #8445596 -
Flags: review?(roc)
Attachment #8447791 -
Flags: review?(roc)
Attachment #8447791 -
Flags: review?(roc) → review+
Comment 8•7 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/f79302ac0ede
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
Reporter | ||
Comment 9•7 years ago
|
||
Verified as fixed on Ubuntu 13.04 x64 (User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:33.0) Gecko/20100101 Firefox/33.0) with latest Firefox 33 Nightly (BuildID: 20140702030201). The video controls now fade away in a 2 second animation as expected.
Status: RESOLVED → VERIFIED
Comment 10•7 years ago
|
||
Given QA has verified this fixed it would be good to uplift this, if it's low risk.
Blocks: 1035114
When will this be uplifted? We are getting really close to the release, and there is risk we wont be able to land it for Firefox 31. :/ Matt, what blocks you here from backporting? See bug 1035114 for another graphical fallout, which this patch would fix.
Flags: needinfo?(matt.woodrow)
Comment 12•7 years ago
|
||
Yeh, the patch seems low risk and have been in m-c for a week, I could take it in 31 in the RC.
Assignee | ||
Comment 13•7 years ago
|
||
Comment on attachment 8447791 [details] [diff] [review] Account for device offset for thebes layer masks v2 Approval Request Comment [Feature/regressing bug #]: Bug 994282 [User impact if declined]: Broken mask layers, reported issue with video controls [Describe test coverage new/current, TBPL]: Tested manually and verified. [Risks and why]: Very low risk, just extends an earlier change to cover all layer types. [String/UUID change made/needed]: None.
Attachment #8447791 -
Flags: approval-mozilla-beta?
Attachment #8447791 -
Flags: approval-mozilla-aurora?
Flags: needinfo?(matt.woodrow)
Updated•7 years ago
|
Attachment #8447791 -
Flags: approval-mozilla-beta?
Attachment #8447791 -
Flags: approval-mozilla-beta+
Attachment #8447791 -
Flags: approval-mozilla-aurora?
Attachment #8447791 -
Flags: approval-mozilla-aurora+
Comment 14•7 years ago
|
||
Comment on attachment 8447791 [details] [diff] [review] Account for device offset for thebes layer masks v2 Actually, I changed my mind for beta. I will however take for ESR 31.1.0
Attachment #8447791 -
Flags: approval-mozilla-beta+
Updated•7 years ago
|
status-firefox-esr31:
--- → affected
tracking-firefox-esr31:
--- → +
Works great with Mozilla/5.0 (X11; Linux x86_64; rv:32.0) Gecko/20100101 Firefox/32.0 ID:20140715004003 CSet: d32649a24965. Thanks for the backport!
Updated•7 years ago
|
Comment 17•6 years ago
|
||
Without active requests from the ESR community, this does not meet ESR landing criteria.
You need to log in
before you can comment on or make changes to this bug.
Description
•