Bug 1028237 - Account for device offset for thebes layer masks. r=roc