gfx/layers/basic/BasicThebesLayer.cpp
@@ -119,7 +119,7 @@ BasicThebesLayer::PaintThebes(gfxContext* aContext,
   AutoMoz2DMaskData mask;
   SourceSurface* maskSurface = nullptr;
   Matrix maskTransform;
-  if (GetMaskData(aMaskLayer, Point(), &mask)) {
+  if (GetMaskData(aMaskLayer, aContext->GetDeviceOffset(), &mask)) {
     maskSurface = mask.GetSurface();
     maskTransform = mask.GetTransform();
   }
